--- a/sites/all/themes/coastal/sass/_variables.scss
+++ b/sites/all/themes/coastal/sass/_variables.scss
@@ -2,8 +2,8 @@
 $break-mid : 568px;
 
 $light-grey : #bcbdc0;
-$light-blue : #00aeef;
-$dark-blue : #0091c8;
+$light-primary : #00aeef;
+$dark-primary : #0091c8;
 
 $text : #231f20;
 
